@@ -1,8 +1,6 @@
 Bug fixes/improvement for cgdb-0.6.0
 
 - TGDB interface changes
- [ ] Empty command queue when the ^c signal is reached. [should this be done
-     in CGDB or TGDB]?
  [ ] Free tgdb_request data structures.
  [ ] Re-arrange the a2 subsystem to be easier and better to modify
  [ ] Modify the tgdb_response data structure to incorporate into it
@@ -50,6 +48,8 @@ Closed:
  [x] Make each command return the request as the return type, instead of
     as the parameter. If the value returns as NULL, there was an error.
  [x] Document INTERFACE_REQUEST_COMMANDS
+ [x] Empty command queue when the ^c signal is reached. [should this be done
+     in CGDB or TGDB]? Done in TGDB.
 
 - If you hit 'o', an extra prompt appears at the console. If you set a 
   breakpoint from the GUI, this doesn't happen. That's because TGDB hacks
